--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "dev": "tsc-watch --onSuccess \"npm start\""
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.17",
+    "prisma": "^5.9.1",
     "tsc-watch": "^6.0.4",
     "typescript": "^5.3.3"
   },
